--- a/style.css
+++ b/style.css
@@ -24,7 +24,8 @@ body {
     text-shadow: 1px 0px 1px #CCCCCC, 0px 1px 1px #EEEEEE, 2px 1px 1px #CCCCCC, 1px 2px 1px #EEEEEE, 3px 2px 1px #CCCCCC, 2px 3px 1px #EEEEEE, 4px 3px 1px #CCCCCC, 3px 4px 1px #EEEEEE, 5px 4px 1px #CCCCCC, 4px 5px 1px #EEEEEE, 6px 5px 1px #CCCCCC, 5px 6px 1px #EEEEEE, 7px 6px 1px #CCCCCC;
 }
 
-.flavor-container, .ornaments-container {
+.flavor-container,
+.ornaments-container {
     height: 60vh;
     padding: 30px;
     margin-bottom: 30px;
@@ -44,7 +45,7 @@ body {
     margin-bottom: 2em;
 }
 
-.list > li {
+.list>li {
     padding: 20px;
     font-size: 1.2em;
     font-weight: bold;
@@ -54,7 +55,7 @@ body {
     position: relative;
 }
 
-.order-container > h2 {
+.order-container>h2 {
     font-size: 2.8em;
     text-transform: uppercase;
 }
@@ -63,7 +64,7 @@ body {
     height: 100vh;
 }
 
-.form-order > h3 {
+.form-order>h3 {
     font-size: 2em;
     margin-bottom: 2em;
     margin-left: 10px;
@@ -81,12 +82,143 @@ body {
     width: 2em;
 }
 
-.form-order > label, p {
+.form-order>label,
+p {
     padding: 0 .5em;
     font-size: 1.4em;
 }
 
-.form-order > p {
+.form-order>p {
     height: 2em;
+}
+
+.form-order>button {
+    height: 8vh;
+    width: 14vw;
+    cursor: pointer;
+    margin: 20px;
+    padding: 0 6px;
+    text-transform: uppercase;
+    font-size: 1em;
+    font-weight: 700;
+    background-color: #FFF3B0;
+    *color: #fff;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 2px 2px 12px 8px #FFF3B0bf;
+}
+
+.form-order>button:hover {
+    background-color: #eee3a3;
+    transform: scale(1.1);
+}
+
+/*? PASTELERO*/
+
+.quantity-container {
+    height: 24%;
+    padding: 28px;
+    margin: 10px 0;
+}
+
+.quantity-container>label {
+    font-size: 2em;
+}
+
+.quantity-container>input {
+    width: 50%;
+    height: 10px;
+    margin-top: 2em;
+}
+
+/**/
+
+input[type="range" i] {
+    appearance: none;
+    cursor: pointer;
+    height: 20px;
+    border-radius: 10px;
+    background: #335C67;
+    border: none;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    appearance: none;
+    background-color: #E09F3E;
+    border-radius: 0.5rem;
+    height: 2rem;
+    width: 2rem;
+}
+
+table {
+    border: 1px solid #1C6EA4;
+    width: 80%;
+    text-align: left;
+    border-collapse: collapse;
+    margin: 20px auto;
+}
+
+table tr, table th, table td {
+    text-align: center;
+    padding: 10px 0;
+    border: 4px solid #335C67;
+}
+
+table dt {
+    text-align: justify;
+    padding-left: 10px;
+    margin: 10px 0;
+}
+
+footer {
+    border-top: 4px solid #E09F3E;
+    height: 34vh;
+    margin-top: 4em;
+    text-align: center;
+    padding: 24px 0;
+    display: grid;
+    grid-template-columns:repeat(3, 1fr);
+    grid-template-rows:repeat(3, 1fr);
+    align-items: center;
+}
+
+footer > a {
+    text-decoration: none;
+    color: #fff;
+    font-size: 20px;
+    height: 10vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 10px;
+}
+
+footer > a:hover {
+    background-color: #9E2A2B;
+    border-radius: 10px;
+    
+}
+
+footer > h2 {
+    grid-row: 1;
+    font-size: 2em;
+    color: #FFF3B0;
+    text-shadow: #222222 4px 8px 6px;
+}
+
+#address-title, #address {
+    grid-column: 1;
+}
+
+#phone-title, #phone-number, #contact {
+    grid-column: 2;
+}
+
+#schedule-title, #schedule {
+    grid-column: 3;
+}
+
+#schedule,#address {
+    grid-row: 2/ span 3;
 }
 
